welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:26: error: '=' expected but identifier found.
def faire jardin(){
          ^FlowerCase:34: error: illegal start of simple expression
}
^