welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def growFlowers(){
  faireFleur(Color.RED);
  avance(4);
  faireFleur(Color.CYAN);
  recule(2);gauche();recule(2);droite();
  faireFleur(Color.ORANGE);
  recule(2);gauche();recule(2);droite();
  faireFleur(Color.PINK);
  avance(4);
  faireFleur(Color.GREEN);
  
}
def faireFleur(c:Color){
  setCouleurBrosse(c);
  baisseBrosse();
  avance(2);recule();
  droite();avance();recule(2);
  avance();gauche();
  leveBrosse();
  setCouleurBrosse(Color.YELLOW);
  baisseBrosse();
  leveBrosse();
  recule();
}

def faire jardin(){
  growFlowers();
  avance(2);gauche()avance(2);droite();
  faireFleur(Color.BLUE);
  avance(2);
  growFlowers();
}